--- a/app/src/main/res/layout/activity_contact_info.xml
+++ b/app/src/main/res/layout/activity_contact_info.xml
@@ -115,7 +115,7 @@
             android:textColor="@color/gray_text" />
     </RelativeLayout>
 
-    <com.youdo.karma.ui.widget.NoScrollGridView
+    <com.crazy.taolove.ui.widget.NoScrollGridView
         android:id="@+id/img_contents"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
